Upload com arquivo docker + documentacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,20 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Configuracaes de banco de dados Oracle
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
-spring.datasource.username=RM554168
-spring.datasource.password=031295
+spring.datasource.username=RM553588
+spring.datasource.password=200296
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:XE
+# spring.datasource.username=system
+# spring.datasource.password=oracle
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+# spring.jpa.hibernate.ddl-auto=update
 
 # Configuracao Flyway
 spring.flyway.enabled=true
